# back/src/controllers/adventurers.controller.ts
@@ -21,12 +21,9 @@ import {
   ApiCreatedResponse,
   ApiOkResponse,
   ApiParam,
-  ApiTags,
 } from '@nestjs/swagger';
 import { FindAdventurersQueryDto } from '../dto/find-adventurers-query.dto';
 
-@ApiTags('Adventurers')
-@ApiBearerAuth()
 @Controller('adventurers')
 export class AdventurersController {
   constructor(private readonly adventurersService: AdventurersService) {}
@@ -56,6 +53,8 @@ export class AdventurersController {
       },
     },
   })
+  findAll(@Query() query: FindAdventurersQueryDto) {
+    return this.adventurersService.findAll(query);
   findAll(@Query() query: FindAdventurersQueryDto) {
     return this.adventurersService.findAll(query);
   }
